--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swedish Chef Talk 👨‍🍳</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Swedish Chef Talk 👩‍🍳</h1>
+      <textarea
+        id="text-input"
+        placeholder="Put your message here which you want to convert to Swedish Chef language"
+      >
+      </textarea>
+      <button id="btn-translate">Translate</button>
+      <h4>Translation text will appear here ⬇</h4>
+      <div id="output"></div>
+    </div>
+
+    <script src="index.js" type="text/javascript"></script>
+  </body>
 </html>
