--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       >
       </textarea>
       <button id="btn-translate">Translate</button>
-      <h4>Translation text will appear here ⬇</h4>
+      <h4>Translation text will appear here 👇</h4>
       <div id="output"></div>
     </div>
 
